[gd_scene load_steps=20 format=4 uid="uid://c6ahriwt65j3v"]

[ext_resource type="Script" uid="uid://x7n86vpq3thr" path="res://PlatformDemoScene/Scripts/platform_demo_scene.gd" id="1_dgv05"]
[ext_resource type="PackedScene" uid="uid://wsvdb4844wue" path="res://PlatformDemoScene/HealthEntity/Scenes/health_point.tscn" id="2_ckbmr"]
[ext_resource type="PackedScene" uid="uid://m7u5e3x6nme8" path="res://Player/Scenes/player.tscn" id="3_2krl2"]
[ext_resource type="Texture2D" uid="uid://kll6eu4dqu2" path="res://PlatformDemoScene/Art/SnowWorldSky.png" id="3_ilxdt"]
[ext_resource type="PackedScene" uid="uid://c5r8q43l8n4wv" path="res://PlatformDemoScene/HealthEntity/Scenes/enemy_health_point.tscn" id="3_txvqw"]
[ext_resource type="Texture2D" uid="uid://c7bagfx6uqf4j" path="res://PlatformDemoScene/Art/SnowWorldMountain.png" id="4_d0xp3"]
[ext_resource type="Texture2D" uid="uid://b87agox7txjne" path="res://PlatformDemoScene/Art/door.png" id="4_vrcox"]
[ext_resource type="Theme" uid="uid://tufc51t2fgr3" path="res://PlatformDemoScene/Art/progressbar.tres" id="5_g5xba"]
[ext_resource type="Texture2D" uid="uid://dp2nkj2u14jm3" path="res://PlatformDemoScene/Art/SnowWorldTrees.png" id="5_txvqw"]
[ext_resource type="TileSet" uid="uid://csgeol2lhjxop" path="res://PlatformDemoScene/Stages/IceTileSheet.tres" id="5_waejo"]
[ext_resource type="Texture2D" uid="uid://0w16ewy8kwre" path="res://PlatformDemoScene/Art/TempBackground.png" id="7_ksbdr"]
[ext_resource type="PackedScene" uid="uid://cxhirmhnvqi3c" path="res://TransitionScene/Scenes/transition_intro.tscn" id="7_waejo"]
[ext_resource type="Texture2D" uid="uid://b67sbjlc1aso4" path="res://PlatformDemoScene/Art/Dummy.png" id="10_ofkun"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ilxdt"]
atlas = ExtResource("4_vrcox")
region = Rect2(0, 48, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d0xp3"]
atlas = ExtResource("4_vrcox")
region = Rect2(32, 48, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_txvqw"]
atlas = ExtResource("4_vrcox")
region = Rect2(64, 48, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofkun"]
atlas = ExtResource("4_vrcox")
region = Rect2(96, 48, 32, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_ksbdr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ilxdt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d0xp3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_txvqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofkun")
}],
"loop": true,
"name": &"Portal",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_waejo"]

[node name="PlatformDemoScene" type="Node2D" node_paths=PackedStringArray("arrayOfLevels")]
script = ExtResource("1_dgv05")
hpEntity = ExtResource("2_ckbmr")
enemyHPEntity = ExtResource("3_txvqw")
arrayOfPositions = Array[Vector2]([Vector2(143, 700), Vector2(143, 700), Vector2(143, 264), Vector2(120, 448)])
arrayOfPortals = Array[Vector2]([Vector2(1832, 680), Vector2(1832, 240), Vector2(1832, 432), Vector2(2220, 432)])
arrayOfLevels = [NodePath("Stage1"), NodePath("Stage2"), NodePath("Stage3"), NodePath("Stage4")]
arrayOfEnemys = Array[Vector2]([Vector2(1016, 304)])
arrayOfPhrases = Array[String](["GO!!!", "FASTER!!", "ALMOST!!!!"])

[node name="NightSky" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(960, 416)
scale = Vector2(4, 4)
texture = ExtResource("3_ilxdt")

[node name="Mountains" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(960, 488)
scale = Vector2(4, 4)
texture = ExtResource("4_d0xp3")

[node name="Trees" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(960, 368)
scale = Vector2(4, 4)
texture = ExtResource("5_txvqw")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Player" parent="." instance=ExtResource("3_2krl2")]
position = Vector2(120, 448)
scale = Vector2(4, 4)

[node name="EndPoint" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(2200, 432)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_ksbdr")
animation = &"Portal"
autoplay = "Portal"

[node name="Area2D" type="Area2D" parent="EndPoint"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EndPoint/Area2D"]
shape = SubResource("CircleShape2D_waejo")

[node name="Stage1" type="TileMapLayer" parent="."]
texture_filter = 1
position = Vector2(0, -392)
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAAAABIAAAACAAUAAAAAABMAAAACAAYAAAAAABQAAAADAAcAAAAAABUAAAADAAcAAAAAABYAAAADAAcAAAABABIAAAACAAUAAAABABMAAAACAAYAAAABABQAAAADAAcAAAABABUAAAADAAcAAAABABYAAAADAAcAAAACABIAAAACAAUAAAACABMAAAACAAYAAAACABQAAAADAAcAAAACABUAAAADAAcAAAACABYAAAADAAcAAAADABIAAAACAAUAAAADABMAAAACAAYAAAADABQAAAADAAcAAAADABUAAAADAAcAAAADABYAAAADAAcAAAAEABIAAAACAAUAAAAEABMAAAACAAYAAAAEABQAAAADAAcAAAAEABUAAAADAAcAAAAEABYAAAADAAcAAAAFABIAAAACAAUAAAAFABMAAAACAAYAAAAFABQAAAADAAcAAAAFABUAAAADAAcAAAAFABYAAAADAAcAAAAGABIAAAACAAUAAAAGABMAAAACAAYAAAAGABQAAAADAAcAAAAGABUAAAADAAcAAAAGABYAAAADAAcAAAAHABIAAAACAAUAAAAHABMAAAACAAYAAAAHABQAAAADAAcAAAAHABUAAAADAAcAAAAHABYAAAADAAcAAAAIABIAAAACAAUAAAAIABMAAAACAAYAAAAIABQAAAADAAcAAAAIABUAAAADAAcAAAAIABYAAAADAAcAAAAJABIAAAACAAUAAAAJABMAAAACAAYAAAAJABQAAAADAAcAAAAJABUAAAADAAcAAAAJABYAAAADAAcAAAAKABIAAAACAAUAAAAKABMAAAACAAYAAAAKABQAAAADAAcAAAAKABUAAAADAAcAAAAKABYAAAADAAcAAAALABIAAAACAAUAAAALABMAAAACAAYAAAALABQAAAADAAcAAAALABUAAAADAAcAAAALABYAAAADAAcAAAAMABIAAAACAAUAAAAMABMAAAACAAYAAAAMABQAAAADAAcAAAAMABYAAAADAAcAAAANABIAAAACAAUAAAANABMAAAACAAYAAAANABQAAAADAAcAAAANABUAAAADAAcAAAANABYAAAADAAcAAAAOABIAAAACAAUAAAAOABMAAAACAAYAAAAOABQAAAADAAcAAAAOABUAAAADAAcAAAAOABYAAAADAAcAAAAPABIAAAACAAUAAAAPABMAAAACAAYAAAAPABQAAAADAAcAAAAPABUAAAADAAcAAAAPABYAAAADAAcAAAAQABIAAAACAAUAAAAQABMAAAACAAYAAAAQABQAAAADAAcAAAAQABUAAAADAAcAAAAQABYAAAADAAcAAAARABIAAAACAAUAAAARABMAAAACAAYAAAARABQAAAADAAcAAAARABUAAAADAAcAAAARABYAAAADAAcAAAASABIAAAACAAUAAAASABMAAAACAAYAAAASABQAAAADAAcAAAASABUAAAADAAcAAAASABYAAAADAAcAAAATABIAAAACAAUAAAATABMAAAACAAYAAAATABQAAAADAAcAAAATABUAAAADAAcAAAATABYAAAADAAcAAAAUABIAAAACAAUAAAAUABMAAAACAAYAAAAUABQAAAADAAcAAAAUABUAAAADAAcAAAAUABYAAAADAAcAAAAVABIAAAACAAUAAAAVABMAAAACAAYAAAAVABQAAAADAAcAAAAVABUAAAADAAcAAAAVABYAAAADAAcAAAAWABIAAAACAAUAAAAWABMAAAACAAYAAAAWABQAAAADAAcAAAAWABUAAAADAAcAAAAWABYAAAADAAcAAAAXABIAAAACAAUAAAAXABMAAAACAAYAAAAXABQAAAADAAcAAAAXABYAAAADAAcAAAAXABUAAAADAAcAAAAYABIAAAACAAUAAAAYABMAAAACAAYAAAAYABQAAAADAAcAAAAYABUAAAADAAcAAAAYABYAAAADAAcAAAAZABIAAAACAAUAAAAZABMAAAACAAYAAAAZABQAAAADAAcAAAAZABUAAAADAAcAAAAZABYAAAADAAcAAAAaABIAAAACAAUAAAAaABMAAAACAAYAAAAaABQAAAADAAcAAAAaABUAAAADAAcAAAAaABYAAAADAAcAAAAbABIAAAACAAUAAAAbABMAAAACAAYAAAAbABQAAAADAAcAAAAbABUAAAADAAcAAAAbABYAAAADAAcAAAAcABIAAAACAAUAAAAcABMAAAACAAYAAAAcABQAAAADAAcAAAAcABYAAAADAAcAAAAdABIAAAACAAUAAAAdABMAAAACAAYAAAAdABQAAAADAAcAAAAdABUAAAADAAcAAAAdABYAAAADAAcAAAAeABIAAAACAAUAAAAeABMAAAACAAYAAAAeABQAAAADAAcAAAAeABUAAAADAAcAAAAeABYAAAADAAcAAAAfABIAAAACAAUAAAAfABMAAAACAAYAAAAfABQAAAADAAcAAAAfABUAAAADAAcAAAAfABYAAAADAAcAAAAgABIAAAACAAUAAAAgABMAAAACAAYAAAAgABQAAAADAAcAAAAgABUAAAADAAcAAAAgABYAAAADAAcAAAAhABIAAAACAAUAAAAhABMAAAACAAYAAAAhABQAAAADAAcAAAAhABUAAAADAAcAAAAhABYAAAADAAcAAAAiABIAAAACAAUAAAAiABMAAAACAAYAAAAiABQAAAADAAcAAAAiABUAAAADAAcAAAAiABYAAAADAAcAAAAjABIAAAACAAUAAAAjABMAAAACAAYAAAAjABQAAAADAAcAAAAjABUAAAADAAcAAAAjABYAAAADAAcAAAAkABIAAAACAAUAAAAkABMAAAACAAYAAAAkABQAAAADAAcAAAAkABUAAAADAAcAAAAkABYAAAADAAcAAAAlABIAAAACAAUAAAAlABMAAAACAAYAAAAlABQAAAADAAcAAAAlABUAAAADAAcAAAAlABYAAAADAAcAAAAmABIAAAACAAUAAAAmABMAAAACAAYAAAAmABQAAAADAAcAAAAmABUAAAADAAcAAAAmABYAAAADAAcAAAAnABIAAAACAAUAAAAnABMAAAACAAYAAAAnABQAAAADAAcAAAAnABYAAAADAAcAAAAMABUAAAADAAcAAAAcABUAAAADAAcAAAAnABUAAAADAAcAAAA=")
tile_set = ExtResource("5_waejo")

[node name="Stage2" type="TileMapLayer" parent="."]
texture_filter = 1
position = Vector2(1280, 186)
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAAAAAkAAAACAAUAAAABAAkAAAAQABAAAAACAAkAAAARAA8AAAAEAAkAAAAFAAYAAAADAAkAAAAGABAAAAAAAAoAAAACAAYAAAABAAoAAAACAAYAAAACAAoAAAARABEAAAADAAoAAAAEAAcAAAAEAAoAAAAFAAcAAAAAAA0AAAACAAgAAAABAA0AAAACAAgAAAAHAA0AAAACAAgAAAAEAAsAAAAFAAYAAAADAAsAAAAEAAcAAAACAAsAAAACAAgAAAABAAsAAAACAAgAAAAAAAsAAAACAAgAAAAAAAwAAAACAAgAAAABAAwAAAACAAgAAAACAAwAAAACAAgAAAADAAgAAAAGABAAAAACAAgAAAARAA8AAAABAAgAAAAAAAkAAAAEAAgAAAAFAAcAAAD//wkAAAACAAUAAAD+/wkAAAACAAUAAAD+/woAAAACAAYAAAD+/wsAAAACAAgAAAD+/wwAAAACAAgAAAD//woAAAACAAYAAAD//wsAAAACAAgAAAD//wwAAAACAAgAAAD9/wsAAAACAAgAAAD9/wwAAAACAAgAAAD7/wkAAAACAAUAAAD7/woAAAACAAYAAAD7/wsAAAACAAgAAAD7/wwAAAACAAgAAAD8/wsAAAACAAgAAAD8/wwAAAACAAgAAAD6/wkAAAACAAUAAAD6/woAAAACAAYAAAD6/wsAAAACAAgAAAD6/wwAAAACAAgAAADz/wkAAAACAAUAAADz/woAAAACAAYAAADz/wsAAAACAAgAAADz/wwAAAACAAgAAAD0/wkAAAACAAUAAAD0/woAAAACAAYAAAD0/wsAAAACAAgAAAD0/wwAAAACAAgAAAD1/wkAAAACAAUAAAD1/woAAAACAAYAAAD1/wsAAAACAAgAAAD1/wwAAAACAAgAAAD2/wkAAAACAAUAAAD2/woAAAACAAYAAAD2/wsAAAACAAgAAAD2/wwAAAACAAgAAAD3/wkAAAACAAUAAAD3/woAAAACAAYAAAD3/wsAAAACAAgAAAD3/wwAAAACAAgAAAD4/wkAAAACAAUAAAD4/woAAAACAAYAAAD4/wsAAAACAAgAAAD4/wwAAAACAAgAAAD5/wkAAAACAAUAAAD5/woAAAACAAYAAAD5/wsAAAACAAgAAAD5/wwAAAACAAgAAADs/wkAAAACAAUAAADs/woAAAACAAYAAADs/wsAAAACAAgAAADs/wwAAAACAAgAAADt/wkAAAACAAUAAADt/woAAAACAAYAAADt/wsAAAACAAgAAADt/wwAAAACAAgAAADu/wkAAAACAAUAAADu/woAAAACAAYAAADu/wsAAAACAAgAAADu/wwAAAACAAgAAADv/wkAAAACAAUAAADv/woAAAACAAYAAADv/wsAAAACAAgAAADv/wwAAAACAAgAAADw/wkAAAACAAUAAADw/woAAAACAAYAAADw/wsAAAACAAgAAADw/wwAAAACAAgAAADx/wkAAAACAAUAAADx/woAAAACAAYAAADx/wsAAAACAAgAAADx/wwAAAACAAgAAADy/wkAAAACAAUAAADy/woAAAACAAYAAADy/wsAAAACAAgAAADy/wwAAAACAAgAAADz/wgAAAAAAAUAAAD0/wgAAAADAAUAAAD1/wgAAAAFAAUAAAD5/wYAAAAAAAUAAAD5/wcAAAAAAAkAAAD5/wgAAAAAAAkAAAD6/wYAAAADAAUAAAD6/wcAAAABAAYAAAD6/wgAAAARAA8AAAD7/wYAAAADAAUAAAD7/wcAAAACAAYAAAD7/wgAAAADAAgAAAABAAUAAAAAAAkAAAACAAUAAAABAAYAAAADAAUAAAAEAAYAAAAEAAUAAAAFAAcAAAABAAQAAAAAAAUAAAACAAQAAAADAAUAAAADAAQAAAADAAUAAAAEAAQAAAAFAAUAAAABAAcAAAAAAAkAAAACAAcAAAARAA8AAAADAAcAAAAGABAAAAAEAAcAAAAFAAcAAAABAAYAAAAAAAkAAAACAAYAAAARAA8AAAADAAYAAAAGABAAAAAEAAYAAAAFAAcAAAD9/wYAAAAFAAUAAAD9/wcAAAAFAAcAAAD8/wYAAAADAAUAAAD8/wcAAAAEAAYAAAD8/wgAAAAGABAAAAD8/wkAAAACAAUAAAD8/woAAAACAAYAAAD9/wgAAAAFAAcAAAD9/wkAAAACAAUAAAD9/woAAAACAAYAAAAHAAIAAAAAAAUAAAAHAAMAAAAAAAkAAAAHAAQAAAAAAAkAAAAHAAUAAAAAAAoAAAAIAAUAAAABAAoAAAAIAAIAAAADAAUAAAAIAAMAAAABAAYAAAAIAAQAAAABAAkAAAAJAAIAAAADAAUAAAAJAAMAAAADAAYAAAAJAAQAAAADAAkAAAAJAAUAAAABAAoAAAADAAwAAAAEAAcAAAAEAAwAAAAFAAYAAAA=")
enabled = false
tile_set = ExtResource("5_waejo")

[node name="Stage3" type="TileMapLayer" parent="."]
texture_filter = 1
position = Vector2(0, -8)
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAACAA0AAAADAAgAAAAAAAUAAAALABAAAAABAAUAAAADAAUAAAACAAUAAAAKABAAAAADAAUAAAABAAUAAAAEAAUAAAAFAAUAAAAEAAcAAAAFAAYAAAAEAAYAAAAFAAYAAAAEAAgAAAAHABAAAAAGAAgAAAAFAAgAAAAKAAgAAAAAAAcAAAALAAgAAAABAAgAAAAZAAgAAAAAAAUAAAAaAAgAAAALABAAAAAbAAgAAAADAAUAAAAbAAkAAAADAAYAAAAZAAkAAAAAAAcAAAAZAAoAAAAAAAcAAAAZAAsAAAAAAAcAAAAZAAwAAAAAAAcAAAAZAA0AAAAAAAcAAAAZAA4AAAAAAAcAAAAZAA8AAAAAAAcAAAAZABAAAAAAAAcAAAAaAAoAAAABAAgAAAAaAAsAAAABAAgAAAAaAAwAAAABAAgAAAAaAA0AAAABAAgAAAAaAA4AAAABAAgAAAAaAA8AAAABAAgAAAAaABAAAAACAAcAAAAbAAoAAAACAAcAAAAbAAsAAAACAAcAAAAbAAwAAAADAAcAAAAbAA0AAAADAAcAAAAbAA4AAAACAAcAAAAbAA8AAAACAAcAAAAaAAkAAAABAAYAAAAcAAkAAAADAAYAAAAcAAoAAAADAAcAAAAcAAsAAAADAAcAAAAcAAwAAAADAAcAAAAcAA0AAAADAAcAAAAcAA4AAAADAAcAAAAcAA8AAAADAAcAAAAcABAAAAAEAAgAAAAdAAkAAAAEAAYAAAAdAAoAAAACAAcAAAAdAAsAAAACAAcAAAAdAAwAAAACAAcAAAAdAA0AAAACAAcAAAAdAA4AAAACAAcAAAAdAA8AAAACAAcAAAAdABAAAAACAAcAAAAcAAgAAAAKABAAAAAdAAgAAAABAAUAAAAdABEAAAACAAcAAAAAAAYAAAABAAYAAAAAAAcAAAADAAgAAAAAAAgAAAADAAgAAAAAAAkAAAADAAgAAAAAAAoAAAADAAgAAAAAAAsAAAACAAgAAAAAAAwAAAACAAgAAAABAAYAAAADAAYAAAABAAcAAAACAAcAAAABAAgAAAACAAcAAAABAAkAAAADAAcAAAABAAoAAAADAAcAAAABAAsAAAADAAgAAAABAAwAAAACAAcAAAACAAYAAAADAAYAAAACAAcAAAADAAcAAAACAAgAAAADAAcAAAACAAkAAAADAAcAAAACAAoAAAADAAcAAAACAAsAAAADAAcAAAACAAwAAAADAAgAAAADAAYAAAAEAAYAAAADAAcAAAAEAAgAAAADAAgAAAAEAAgAAAADAAkAAAAGABEAAAADAAoAAAACAAcAAAADAAsAAAACAAcAAAADAAwAAAACAAcAAAAEAAkAAAACAAYAAAAFAAkAAAAEAAYAAAAGAAkAAAAFAAgAAAAGAAoAAAAFAAgAAAAGAAsAAAAFAAgAAAAGAAwAAAAFAAgAAAAGAA0AAAAFAAgAAAAGAA4AAAAFAAgAAAAGAA8AAAAFAAgAAAAGABAAAAAFAAgAAAAGABEAAAAFAAgAAAAFABEAAAAFAAgAAAAEAAoAAAADAAgAAAAEAAsAAAADAAgAAAAEAAwAAAADAAgAAAAEAA0AAAADAAgAAAAEAA4AAAADAAgAAAAEAA8AAAADAAgAAAADAA4AAAADAAgAAAACAA4AAAADAAgAAAACAA8AAAADAAgAAAABAA8AAAADAAgAAAABAA4AAAADAAgAAAABAA0AAAADAAgAAAAAAA0AAAACAAgAAAABABAAAAADAAgAAAADAA8AAAADAAgAAAADAA0AAAADAAgAAAAAAA4AAAACAAgAAAAAAA8AAAACAAgAAAAFAAoAAAAEAAcAAAAFAAsAAAAEAAcAAAAFAAwAAAAEAAcAAAAFAA0AAAAEAAcAAAAFAA4AAAAEAAcAAAAFAA8AAAAEAAcAAAAFABAAAAAEAAcAAAAKAAYAAAAAAAUAAAAKAAcAAAAAAAcAAAAKAAkAAAAAAAcAAAAKAAoAAAAAAAcAAAAKAAsAAAAAAAcAAAAKAAwAAAAAAAcAAAAKAA0AAAAAAAcAAAALAAYAAAALABAAAAALAAcAAAABAAYAAAALAAkAAAABAAgAAAALAAoAAAABAAgAAAALAAsAAAABAAgAAAALAAwAAAABAAgAAAALAA0AAAABAAgAAAANABAAAAAFAAcAAAAKAA4AAAAAAAgAAAAKAA8AAAAAAAgAAAAKABAAAAAAAAgAAAALAA4AAAABAAgAAAALAA8AAAABAAgAAAAGAAUAAAAFAAUAAAAGAAYAAAAFAAgAAAAGAAcAAAAFAAgAAAAFAAgAAAAQABAAAAAFAAUAAAAAAAUAAAAFAAYAAAAAAAcAAAAFAAcAAAAAAAcAAAANAAYAAAADAAUAAAANAAcAAAAEAAYAAAANAAgAAAAEAAcAAAANAAkAAAAEAAcAAAANAAoAAAAEAAcAAAANAAsAAAAEAAcAAAANAAwAAAAEAAcAAAANAA0AAAAEAAcAAAANAA4AAAAEAAcAAAANAA8AAAAEAAcAAAAOAAYAAAAFAAUAAAAOAAcAAAAFAAcAAAAOAAgAAAAFAAcAAAAOAAkAAAAFAAcAAAAOAAoAAAAFAAcAAAAOAAsAAAAFAAcAAAAOAAwAAAAFAAcAAAAOAA0AAAAFAAcAAAAOAA4AAAAFAAcAAAAOAA8AAAAFAAcAAAAMAAYAAAACAAUAAAAMAAcAAAADAAYAAAAMAAgAAAADAAcAAAAMAAkAAAADAAcAAAAMAAoAAAADAAcAAAAMAAsAAAADAAcAAAAMAAwAAAADAAcAAAAMAA0AAAADAAcAAAAMAA4AAAADAAcAAAAMAA8AAAADAAcAAAAMABAAAAADAAcAAAASAAgAAAAAAAcAAAASAAkAAAAAAAcAAAASAAoAAAAAAAcAAAASAAsAAAAAAAcAAAASAAwAAAAAAAcAAAASAA0AAAAAAAcAAAASAA4AAAAAAAcAAAATAAgAAAAFAAYAAAATAAkAAAAFAAYAAAATAAoAAAAHABAAAAATAAsAAAABAAYAAAATAAwAAAABAAcAAAATAA0AAAABAAcAAAATAA4AAAABAAcAAAAUAAgAAAAAAAcAAAAUAAkAAAAAAAcAAAAUAAoAAAAQABAAAAAUAAsAAAAEAAYAAAAUAAwAAAAEAAcAAAAUAA0AAAAEAAcAAAAUAA4AAAAEAAcAAAAUAA8AAAAEAAcAAAAUABAAAAAEAAcAAAAVAAgAAAAFAAcAAAAVAAkAAAAFAAcAAAAVAAoAAAAFAAcAAAAVAAsAAAAFAAcAAAAVAAwAAAAFAAcAAAAVAA0AAAAFAAcAAAAVAA4AAAAFAAcAAAAVAA8AAAAFAAcAAAAVABAAAAAFAAcAAAASAAcAAAAAAAUAAAASABAAAAAAAAcAAAATAAcAAAAFAAUAAAATABAAAAABAAcAAAAUAAcAAAAAAAUAAAAVAAcAAAAFAAUAAAASAA8AAAAAAAcAAAATAA8AAAABAAcAAAA=")
enabled = false
tile_set = ExtResource("5_waejo")

[node name="Stage4" type="TileMapLayer" parent="."]
texture_filter = 1
position = Vector2(0, -8)
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAAZABAAAAAAAAcAAAAaABAAAAACAAcAAAAcABAAAAAEAAgAAAAdABAAAAACAAcAAAAdABEAAAACAAcAAAAGABEAAAAFAAcAAAAFABEAAAABAAgAAAANABAAAAAFAAcAAAAKABAAAAAAAAgAAAASABEAAAAAAAgAAAATABEAAAABAAgAAAAUABAAAAABAAgAAAAUABEAAAAEAAcAAAAVABAAAAAFAAcAAAAVABEAAAAFAAcAAAATAAkAAAARABEAAAATAAoAAAADAAcAAAATAAsAAAADAAcAAAATAAwAAAADAAcAAAATAA0AAAADAAcAAAATAA4AAAADAAcAAAATAA8AAAADAAcAAAATABAAAAAAAAgAAAAUAAgAAAAEAAcAAAAUAAkAAAAEAAcAAAAUAAoAAAAEAAcAAAAUAAsAAAAEAAcAAAAUAAwAAAAEAAcAAAAUAA0AAAAEAAcAAAAUAA4AAAAEAAcAAAAUAA8AAAAEAAcAAAD+/wgAAAAAAAUAAAD+/wkAAAAAAAcAAAD+/woAAAAAAAcAAAD+/wsAAAAAAAcAAAD+/wwAAAAAAAcAAAD+/w0AAAAAAAcAAAD+/w4AAAAAAAcAAAD+/w8AAAAAAAcAAAD//wgAAAALABAAAAD//wkAAAABAAYAAAD//woAAAABAAgAAAD//wsAAAABAAgAAAD//wwAAAABAAgAAAD//w0AAAABAAgAAAD//w4AAAABAAgAAAD//w8AAAABAAgAAAAAAAgAAAADAAUAAAAAAAkAAAADAAYAAAAAAAoAAAACAAcAAAAAAAsAAAACAAcAAAAAAAwAAAADAAcAAAAAAA0AAAADAAcAAAAAAA4AAAACAAcAAAAAAA8AAAACAAcAAAABAAgAAAAKABAAAAABAAkAAAADAAYAAAABAAoAAAADAAcAAAABAAsAAAADAAcAAAABAAwAAAADAAcAAAABAA0AAAADAAcAAAABAA4AAAADAAcAAAABAA8AAAADAAcAAAACAAgAAAABAAUAAAACAAkAAAADAAYAAAACAAoAAAACAAcAAAACAAsAAAACAAcAAAACAAwAAAACAAcAAAACAA0AAAACAAcAAAACAA4AAAACAAcAAAACAA8AAAACAAcAAAADAAgAAAABAAUAAAADAAkAAAADAAYAAAADAAoAAAACAAcAAAADAAsAAAACAAcAAAADAAwAAAACAAcAAAADAA0AAAACAAcAAAADAA4AAAACAAcAAAADAA8AAAACAAcAAAAEAAgAAAABAAUAAAAEAAkAAAADAAYAAAAEAAoAAAACAAcAAAAEAAsAAAACAAcAAAAEAAwAAAACAAcAAAAEAA0AAAACAAcAAAAEAA4AAAACAAcAAAAEAA8AAAACAAcAAAAFAAgAAAABAAUAAAAFAAkAAAAEAAYAAAAFAAoAAAAEAAcAAAAFAAsAAAAEAAcAAAAFAAwAAAAEAAcAAAAFAA0AAAAEAAcAAAAFAA4AAAAEAAcAAAAFAA8AAAAEAAcAAAAGAAgAAAAFAAUAAAAGAAkAAAAFAAcAAAAGAAoAAAAFAAcAAAAGAAsAAAAFAAcAAAAGAAwAAAAFAAcAAAAGAA0AAAAFAAcAAAAGAA4AAAAFAAcAAAAGAA8AAAAFAAcAAAAGABAAAAAFAAcAAAAFABAAAAABAAgAAAAKAAYAAAAAAAUAAAAKAAcAAAAAAAcAAAAKAAgAAAAAAAcAAAAKAAkAAAAAAAcAAAAKAAoAAAAAAAcAAAAKAAsAAAAAAAcAAAAKAAwAAAAAAAcAAAAKAA0AAAAAAAcAAAAKAA4AAAAAAAgAAAAKAA8AAAAAAAgAAAAUAAYAAAADAAUAAAAUAAcAAAAEAAYAAAAVAAYAAAAFAAUAAAAVAAcAAAAFAAcAAAAVAAgAAAAFAAcAAAAVAAkAAAAFAAcAAAAVAAoAAAAFAAcAAAAVAAsAAAAFAAcAAAAVAAwAAAAFAAcAAAAVAA0AAAAFAAcAAAAVAA4AAAAFAAcAAAAVAA8AAAAFAAcAAAANAAYAAAALABAAAAANAAcAAAAEAAYAAAANAAgAAAAEAAkAAAANAAkAAAAEAAYAAAANAAoAAAAEAAcAAAANAAsAAAAEAAcAAAANAAwAAAAEAAcAAAANAA0AAAAGABEAAAANAA4AAAADAAcAAAANAA8AAAADAAcAAAAOAAYAAAADAAUAAAAOAAcAAAABAAYAAAAOAAgAAAABAAkAAAAOAAkAAAABAAYAAAAOAAoAAAABAAcAAAAOAAsAAAABAAcAAAAOAAwAAAABAAkAAAAOAA0AAAAKABEAAAAOAA4AAAADAAcAAAAOAA8AAAADAAcAAAAPAAYAAAALABAAAAAPAAcAAAALABEAAAAPAAoAAAADAAcAAAAPAAsAAAADAAcAAAAPAAwAAAADAAkAAAAPAA0AAAAKABEAAAAPAA4AAAADAAcAAAAPAA8AAAADAAcAAAAQAAYAAAADAAUAAAAQAAoAAAADAAcAAAAQAAsAAAADAAcAAAAQAAwAAAADAAkAAAAQAA0AAAAKABEAAAAQAA4AAAADAAcAAAAQAA8AAAADAAcAAAARAAYAAAALABAAAAARAAoAAAAEAAcAAAARAAsAAAAEAAcAAAARAAwAAAAEAAkAAAARAA0AAAAKABEAAAARAA4AAAADAAcAAAARAA8AAAADAAcAAAASAAYAAAADAAUAAAASAAcAAAABAAYAAAASAAoAAAABAAcAAAASAAsAAAABAAcAAAASAAwAAAABAAcAAAASAA0AAAARABEAAAASAA4AAAADAAcAAAASAA8AAAADAAcAAAATAAYAAAALABAAAAATAAcAAAALABEAAAALAAYAAAALABAAAAALAAcAAAABAAYAAAALAAgAAAABAAgAAAALAAkAAAABAAgAAAALAAoAAAABAAgAAAALAAsAAAABAAgAAAALAAwAAAABAAgAAAALAA0AAAABAAgAAAALAA4AAAABAAgAAAALAA8AAAABAAgAAAAMAAYAAAADAAUAAAAMAAcAAAALABEAAAAMAAgAAAAGAAgAAAAMAAkAAAAGABEAAAAMAAoAAAADAAcAAAAMAAsAAAADAAcAAAAMAAwAAAADAAcAAAAMAA0AAAADAAcAAAAMAA4AAAADAAcAAAAMAA8AAAADAAcAAAATAAgAAAARAAgAAAAQAAgAAAAGAAgAAAAQAAkAAAAGABEAAAARAAcAAAAEAAYAAAARAAgAAAAEAAkAAAARAAkAAAAEAAYAAAASAAgAAAABAAkAAAASAAkAAAABAAYAAAAPAAgAAAARAAgAAAAPAAkAAAARABEAAAAQAAcAAAAKABEAAAA=")
enabled = false
tile_set = ExtResource("5_waejo")

[node name="Dummy" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(1016, 304)
scale = Vector2(4, 4)
texture = ExtResource("10_ofkun")

[node name="Area2D" type="Area2D" parent="Dummy"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Dummy/Area2D"]
shape = SubResource("CircleShape2D_waejo")
disabled = true

[node name="ProgressBar" type="ProgressBar" parent="."]
texture_filter = 1
offset_top = 984.0
offset_right = 1920.0
offset_bottom = 1056.0
size_flags_vertical = 8
theme = ExtResource("5_g5xba")
show_percentage = false

[node name="BackgroundSprite" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(960, 540)
texture = ExtResource("7_ksbdr")

[node name="TransitionIntro" parent="." instance=ExtResource("7_waejo")]
position = Vector2(960, 540)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="EndPoint/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Dummy/Area2D" to="." method="_on_area_2d_body_entered_dummy"]
